# ft_nm

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
docs/: elf.md
incs/: const_defines.h  nm.h
libs/libft/: .gitignore  Makefile
libs/libft/incs/: libft.h
libs/libft/incs/libft/: ft_dlst.h  ft_lst.h  ft_nbrs.h  ft_printf.h
libs/libft/srcs/ft_dlst/: ft_dlstnew.c
libs/libft/srcs/ft_lst/: ft_freelst.c
libs/libft/srcs/ft_printf/: ft_printf.c
src/: elf_head_infos_reader.c  ft_nm.c  generic_utils.c  init_utils.c  list_utils.c  main.c  utils.c  x64_arch.c  x64_type_getter.c  x86_arch.c  x86_type_getter.c
